made more mlh-ey

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: The Major League Hacking Hackathon Organizer's Guide
+title: Hackathon Organizer's Guide
 email: hi@mlh.io
 description: > # this means to ignore newlines until "baseurl:"
   The Book of Hackathon is an open-source initiative to make a hackathon playbook.
